aulway: add buy ticket
