# internal/transport/http/router.go
@@ -5,9 +5,12 @@ import (
 	"aulway/internal/handler/bus"
 	"aulway/internal/handler/healthz"
 	"aulway/internal/handler/route"
+	"aulway/internal/handler/ticket"
 	"aulway/internal/handler/user"
 	busRepostory "aulway/internal/repository/bus"
+	paymentRepostory "aulway/internal/repository/payment"
 	routeRepostory "aulway/internal/repository/route"
+	ticketRepository "aulway/internal/repository/ticket"
 	userRepository "aulway/internal/repository/user"
 	"aulway/internal/service"
 	middleware "aulway/internal/transport/middlware"
@@ -51,7 +54,12 @@ func (r *Router) Build() *echo.Echo {
 	routeRepo := routeRepostory.New(r.db)
 	routeService := service.NewRouteService(routeRepo)
 
-	// Middleware
+	paymentRepo := paymentRepostory.New(r.db)
+	paymentService := service.NewFPaymentProcessor()
+
+	ticketRepo := ticketRepository.New(r.db)
+	ticketService := service.NewTicketService(ticketRepo, paymentRepo, routeRepo, paymentService)
+
 	timeoutWithConfig := echoMiddleware.TimeoutWithConfig(
 		echoMiddleware.TimeoutConfig{
 			Skipper:      echoMiddleware.DefaultSkipper,
@@ -93,43 +101,7 @@ func (r *Router) Build() *echo.Echo {
 	adminProtected.DELETE("/routes/:routeId", route.DeleteRouteHandler(routeService, r.c))
 	publicProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
 
-	//
-	//publicProtected.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
-
-	//publicProtected.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
-	//publicProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
-	//
-	//// ----- admin APIs
-	//
-	//adminProtected := e.Group("/admin", middleware.AccessCheckMiddleware(AdminRole))
-	//
-	//adminProtected.PUT("/users/:userId", user.UpdateUserHandler(userService))
-	//adminProtected.GET("/users/userId", user.GetUserByIdHandler(userService))
-	//adminProtected.GET("/users", user.GetUsersList(userService))
-	//
-	//adminProtected.POST("/buses", bus.CreateBusHandler(busService, r.c))
-	//adminProtected.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
-	//
-	//adminProtected.POST("/routes", route.CreateRouteHandler(routeService, busService, r.c))
-	//adminProtected.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
-	//adminProtected.PUT("/routes/:routeId", route.UpdateRouteHandler(routeService, r.c))
-	//adminProtected.DELETE("/routes/:routeId", route.DeleteRouteHandler(routeService, r.c))
-	//adminProtected.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
+	publicProtected.POST("/tickets/:routeId", ticket.BuyTicketHandler(ticketService))
 
 	return e
 }
-
-// ----- test APIs
-
-//e.PUT("/users/:userId", user.UpdateUserHandler(userService))
-//e.GET("/users/userId", user.GetUserByIdHandler(userService))
-//adminProtected.GET("/users", user.GetUsersList(userService))
-//
-//e.POST("/buses", bus.CreateBusHandler(busService, r.c))
-//e.GET("/buses/:busId", bus.GetBusHandler(busService, r.c))
-//
-//e.POST("/routes", route.CreateRouteHandler(routeService, busService, r.c))
-//e.GET("/routes/:routeId", route.GetRouteHandler(routeService, r.c))
-//e.PUT("/routes/:routeId", route.UpdateRouteHandler(routeService, r.c))
-//e.DELETE("/routes/:routeId", route.DeleteRouteHandler(routeService, r.c))
-//e.GET("/routes", route.GetRoutesListHandler(routeService, r.c))
